--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "thread_buffet",
   "version": "1.0.0",
   "description": "A Discord bot that makes it easier to find active threads.",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
+    "start": "node .",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
