--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
   "type": "module",
   "exports": "./src/index.js",
   "scripts": {
-    "start": "node ./src/index.js",
-    "deploy-commands": "node ./src/deploy-commands.js",
+    "build": "npx tsc --build",
+    "clean": "npx tsc --build --clean",
+    "start": "node ./dist/index.js",
+    "deploy-commands": "node ./dist/deploy-commands.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
@@ -22,5 +24,8 @@
     "@discordjs/rest": "^0.3.0",
     "discord-api-types": "^0.26.1",
     "discord.js": "^13.6.0"
+  },
+  "devDependencies": {
+    "typescript": "^4.5.5"
   }
 }
