--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "npx tsc --build",
     "clean": "npx tsc --build --clean",
     "start": "node ./dist/index.js",
-    "deploy-commands": "node ./dist/deploy-commands.js",
+    "register-commands": "node ./dist/register-commands.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
