Change module to ES2020. Admittedly I don't know if this is the best, but it seemed most reasonable to fix an error involving import.meta.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,7 @@
     // JavaScript support
     "allowJs": true,
     // Modules
-    "module": "CommonJS",
+    "module": "ES2020",
     "moduleResolution": "node"
   },
   "include": ["./src/**/*"]
