Enable alwaysStrict and strictNullChecks.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,8 @@
 {
   "compilerOptions": {
+    // Type checking
+    "alwaysStrict": true,
+    "strictNullChecks": true,
     // Emit
     "outDir": "dist",
     "sourceMap": true,
