--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "@discordjs/builders": "^0.12.0",
     "@discordjs/rest": "^0.3.0",
     "discord-api-types": "^0.26.1",
-    "discord.js": "^13.6.0"
+    "discord.js": "^13.6.0",
+    "lowdb": "^3.0.0"
   },
   "devDependencies": {
     "typescript": "^4.5.5"
